--- a/PInvoke/User32.Gdi/Vanara.PInvoke.User32.Gdi.csproj
+++ b/PInvoke/User32.Gdi/Vanara.PInvoke.User32.Gdi.csproj
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Description>Methods, structures and constants imported from User32.dll and specific to graphics or window management.</Description>
+    <Description>PInvoke API (methods, structures and constants) imported from Windows User32.dll and specific to graphics or window management.</Description>
     <Copyright>Copyright © 2017-2019</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>2.3.1</VersionPrefix>
+    <VersionPrefix>2.3.2</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.User32.Gdi</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
