--- a/PInvoke/PowrProf/Vanara.PInvoke.PowrProf.csproj
+++ b/PInvoke/PowrProf/Vanara.PInvoke.PowrProf.csproj
@@ -4,7 +4,7 @@
     <Description>PInvoke API (methods, structures and constants) imported from Windows PowrProf.dll.</Description>
     <Copyright>Copyright © 2017-2019</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>2.3.2</VersionPrefix>
+    <VersionPrefix>2.3.3</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45;netstandard2.0;netcoreapp2.0;netcoreapp2.1</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.PowrProf</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -28,7 +28,7 @@ Functions
 CallNtPowerInformation, CanUserWritePwrScheme, DeletePwrScheme, DevicePowerClose, DevicePowerEnumDevices, DevicePowerOpen, DevicePowerSetDeviceState, EnumPwrSchemes, GetActivePwrScheme, GetCurrentPowerPolicies, GetPwrCapabilities, GetPwrDiskSpindownRange, IsPwrHibernateAllowed, IsPwrShutdownAllowed, IsPwrSuspendAllowed, PowerCanRestoreIndividualDefaultPowerScheme, PowerCreatePossibleSetting, PowerCreateSetting, PowerDeleteScheme, PowerDeterminePlatformRole, PowerDeterminePlatformRoleEx, PowerDuplicateScheme, PowerEnumerate, PowerGetActiveScheme, PowerImportPowerScheme, PowerIsSettingRangeDefined, PowerReadACDefaultIndex, PowerReadACValue, PowerReadACValueIndex, PowerReadDCDefaultIndex, PowerReadDCValue, PowerReadDCValueIndex, PowerReadDescription, PowerReadFriendlyName, PowerReadIconResourceSpecifier, PowerReadPossibleDescription, PowerReadPossibleFriendlyName, PowerReadPossibleValue, PowerReadSettingAttributes, PowerReadValueIncrement, PowerReadValueMax, PowerReadValueMin, PowerReadValueUnitsSpecifier, PowerRegisterForEffectivePowerModeNotifications, PowerRegisterSuspendResumeNotification, PowerRemovePowerSetting, PowerReplaceDefaultPowerSchemes, PowerReportThermalEvent, PowerRestoreDefaultPowerSchemes, PowerRestoreIndividualDefaultPowerScheme, PowerSetActiveScheme, PowerSettingAccessCheck, PowerSettingAccessCheckEx, PowerSettingRegisterNotification, PowerSettingUnregisterNotification, PowerUnregisterFromEffectivePowerModeNotifications, PowerUnregisterSuspendResumeNotification, PowerWriteACDefaultIndex, PowerWriteACValueIndex, PowerWriteDCDefaultIndex, PowerWriteDCValueIndex, PowerWriteDescription, PowerWriteFriendlyName, PowerWriteIconResourceSpecifier, PowerWritePossibleDescription, PowerWritePossibleFriendlyName, PowerWritePossibleValue, PowerWriteSettingAttributes, PowerWriteValueIncrement, PowerWriteValueMax, PowerWriteValueMin, PowerWriteValueUnitsSpecifier, ReadGlobalPwrPolicy, ReadProcessorPwrScheme, ReadPwrScheme, SetActivePwrScheme, SetSuspendState, WriteGlobalPwrPolicy, WriteProcessorPwrScheme, WritePwrScheme
 
 Structures
-BATTERY_REPORTING_SCALE, SYSTEM_POWER_CAPABILITIES, DEVICE_NOTIFY_SUBSCRIBE_PARAMETERS, GLOBAL_MACHINE_POWER_POLICY, GLOBAL_POWER_POLICY, GLOBAL_USER_POWER_POLICY, MACHINE_POWER_POLICY, MACHINE_PROCESSOR_POWER_POLICY, POWER_ACTION_POLICY, POWER_POLICY, PROCESSOR_POWER_POLICY, PROCESSOR_POWER_POLICY_INFO, SYSTEM_POWER_LEVEL, THERMAL_EVENT, USER_POWER_POLICY
+DEVICE_NOTIFY_SUBSCRIBE_PARAMETERS, GLOBAL_MACHINE_POWER_POLICY, GLOBAL_POWER_POLICY, GLOBAL_USER_POWER_POLICY, MACHINE_POWER_POLICY, MACHINE_PROCESSOR_POWER_POLICY, POWER_POLICY, THERMAL_EVENT, USER_POWER_POLICY, BATTERY_REPORTING_SCALE, POWER_ACTION_POLICY, PROCESSOR_POWER_POLICY, PROCESSOR_POWER_POLICY_INFO, SYSTEM_POWER_CAPABILITIES, SYSTEM_POWER_LEVEL
 
 </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
