--- a/Core/Vanara.Core.csproj
+++ b/Core/Vanara.Core.csproj
@@ -58,22 +58,43 @@ CorrepsondingAction, StringListPackMethod
   <ItemGroup Condition=" '$(TargetFramework)' == 'net40' ">
     <Reference Include="System.Drawing" />
     <Reference Include="System" />
+    <PackageReference Include="System.ValueTuple">
+      <Version>4.5.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
     <Reference Include="System.Drawing" />
     <Reference Include="System" />
+    <PackageReference Include="System.ValueTuple">
+      <Version>4.5.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Collections\Hierarchy.cs" />
     <Compile Remove="Collections\Tree.cs" />
     <Compile Remove="Collections\VaList.cs" />
+    <Compile Remove="InteropServices\StructMarshaler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Collections\Hierarchy.cs" />
     <None Include="Collections\Tree.cs" />
     <None Include="Collections\VaList.cs" />
+    <None Include="InteropServices\StructMarshaler.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Theraot.Core" Version="3.0.2" Condition=" '$(TargetFramework)' != 'netstandard2.0' " />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
