--- a/PInvoke/SearchApi/Vanara.PInvoke.SearchApi.csproj
+++ b/PInvoke/SearchApi/Vanara.PInvoke.SearchApi.csproj
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
+  <ProjectExtensions>
+    <SupportedDlls></SupportedDlls>
+  </ProjectExtensions>
   <PropertyGroup>
     <Description>PInvoke API (methods, structures and constants imported from Windows Search.</Description>
     <Copyright>Copyright © 2017-2019</Copyright>
@@ -24,14 +27,11 @@
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <PackageReleaseNotes>Currently implements:
 
-Classes
-ICondition, ICondition2, IConditionFactory, IConditionFactory2, IEntity, IEnumSearchRoots, IEnumSearchScopeRules, IFilter, ILoadFilter, INamedEntity, IOpLockStatus, IProtocolHandlerSite, IQueryParser, IQueryParserManager, IQuerySolution, IRelationship, IRichChunk, IRowsetEvents, IRowsetPrioritization, ISchemaLocalizerSupport, ISchemaProvider, ISearchCatalogManager, ISearchCatalogManager2, ISearchCrawlScopeManager, ISearchCrawlScopeManager2, ISearchFolderItemFactory, ISearchItemsChangedSink, ISearchLanguageSupport, ISearchManager, ISearchManager2, ISearchNotifyInlineSite, ISearchPersistentItemsChangedSink, ISearchProtocol, ISearchProtocol2, ISearchProtocolThreadContext, ISearchQueryHelper, ISearchRoot, ISearchScopeRule, ISearchViewChangedSink, ITokenCollection, IUrlAccessor, IUrlAccessor2, IUrlAccessor3, IUrlAccessor4, CompoundCondition, ConditionFactory, CSearchManager, CSearchRoot, CSearchScopeRule, FilterRegistration, LeafCondition, NegationCondition, QueryParser, QueryParserManager, SearchApi, SearchFolderItemFactory
-
 Structures
 AUTHENTICATION_INFO, FILTERED_DATA_SOURCES, FILTERREGION, INCREMENTAL_ACCESS_INFO, ITEM_INFO, PROXY_INFO, SEARCH_COLUMN_PROPERTIES, SEARCH_ITEM_CHANGE, SEARCH_ITEM_INDEXING_STATUS, SEARCH_ITEM_PERSISTENT_CHANGE, TIMEOUT_INFO
 
-Enumerations
-AUTH_TYPE, CatalogPausedReason, CatalogStatus, CHUNK_BREAKTYPE, CHUNKSTATE, CLUSION_REASON, CONDITION_CREATION_OPTIONS, CONDITION_OPERATION, CONDITION_TYPE, FOLLOW_FLAGS, IFILTER_FLAGS, IFILTER_INIT, PRIORITIZE_FLAGS, PRIORITY_LEVEL, PROXY_ACCESS, QUERY_PARSER_MANAGER_OPTION, ROWSETEVENT_ITEMSTATE, ROWSETEVENT_TYPE, SEARCH_INDEXING_PHASE, SEARCH_KIND_OF_CHANGE, SEARCH_NOTIFICATION_PRIORITY, SEARCH_QUERY_SYNTAX, SEARCH_TERM_EXPANSION, STRUCTURED_QUERY_MULTIOPTION, STRUCTURED_QUERY_RESOLVE_OPTION, STRUCTURED_QUERY_SINGLE_OPTION
+Interfaces
+IEnumSearchRoots, IEnumSearchScopeRules, IFilter, ILoadFilter, IOpLockStatus, IProtocolHandlerSite, IRowsetEvents, IRowsetPrioritization, ISearchCatalogManager, ISearchCatalogManager2, ISearchCrawlScopeManager, ISearchCrawlScopeManager2, ISearchItemsChangedSink, ISearchLanguageSupport, ISearchManager, ISearchManager2, ISearchNotifyInlineSite, ISearchPersistentItemsChangedSink, ISearchProtocol, ISearchProtocol2, ISearchProtocolThreadContext, ISearchQueryHelper, ISearchRoot, ISearchScopeRule, ISearchViewChangedSink, IUrlAccessor, IUrlAccessor2, IUrlAccessor3, IUrlAccessor4, ISearchFolderItemFactory, IConditionFactory, IConditionFactory2, IEntity, INamedEntity, IQueryParser, IQueryParserManager, IQuerySolution, IRelationship, ISchemaLocalizerSupport, ISchemaProvider, ITokenCollection, ICondition, ICondition2, IRichChunk
 
 </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
