--- a/Vanara.Library.nuspec
+++ b/Vanara.Library.nuspec
@@ -22,6 +22,7 @@
       <dependency id="Vanara.PInvoke.AclUI" version="3.2.7" />
       <dependency id="Vanara.PInvoke.BITS" version="3.2.7" />
       <dependency id="Vanara.PInvoke.Cabinet" version="3.2.7" />
+      <dependency id="Vanara.PInvoke.CldApi" version="3.2.7" />
       <dependency id="Vanara.PInvoke.ComCtl32" version="3.2.7" />
       <dependency id="Vanara.PInvoke.CredUI" version="3.2.7" />
       <dependency id="Vanara.PInvoke.Cryptography" version="3.2.7" />
@@ -41,6 +42,7 @@
       <dependency id="Vanara.PInvoke.Pdh" version="3.2.7" />
       <dependency id="Vanara.PInvoke.PowrProf" version="3.2.7" />
       <dependency id="Vanara.PInvoke.Printing" version="3.2.7" />
+      <dependency id="Vanara.PInvoke.ProjectedFSLib" version="3.2.7" />
       <dependency id="Vanara.PInvoke.SearchApi" version="3.2.7" />
       <dependency id="Vanara.PInvoke.Security" version="3.2.7" />
       <dependency id="Vanara.PInvoke.Shared" version="3.2.7" />
