--- a/UnitTests/PInvoke/PowrProf/PowrProf.csproj
+++ b/UnitTests/PInvoke/PowrProf/PowrProf.csproj
@@ -47,6 +47,14 @@
       <Project>{a5e519e9-feba-4fe3-93a5-b8269bef72f4}</Project>
       <Name>Vanara.PInvoke.Shared</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\PInvoke\User32\Vanara.PInvoke.User32.csproj">
+      <Project>{a6771907-addc-49fc-8444-a97aa65e77e2}</Project>
+      <Name>Vanara.PInvoke.User32</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\CSharpRunner\Shared.csproj">
+      <Project>{a96cff10-0967-429a-8700-4a86c97c5603}</Project>
+      <Name>Shared</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NUnit">
