--- a/UnitTests/CSharpRunner/Shared.csproj
+++ b/UnitTests/CSharpRunner/Shared.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CSharpRunner.cs" />
+    <Compile Include="GenericTester.cs" />
     <Compile Include="PrivBlock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SuccessfulConstraint.cs" />
