--- a/Windows.Shell/Vanara.Windows.Shell.csproj
+++ b/Windows.Shell/Vanara.Windows.Shell.csproj
@@ -28,10 +28,9 @@ ChangeFilters, DialogStatus, ExecutableType, FileUsageType, FolderItemFilter, Li
   <ItemGroup Condition=" '$(TargetFramework)' == 'net35' ">
     <Reference Include="WindowsBase" />
   </ItemGroup>
-  <ItemGroup Condition=" $(TargetFramework.StartsWith('netcore')) ">
-    <PackageReference Include="System.IO.FileSystem.AccessControl">
-      <Version>4.6.0</Version>
-    </PackageReference>
+  <ItemGroup>
+    <PackageReference Include="System.IO.FileSystem.AccessControl" Version="4.6.0" Condition=" $(TargetFramework.StartsWith('netcore')) " />
+    <PackageReference Include="Theraot.Core" Version="3.2.0" Condition=" $(TargetFramework.StartsWith('net2')) Or $(TargetFramework.StartsWith('net3')) Or $(TargetFramework.StartsWith('net4')) " />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Vanara.Core.csproj" />
