--- a/PInvoke/Ole/Vanara.PInvoke.Ole.csproj
+++ b/PInvoke/Ole/Vanara.PInvoke.Ole.csproj
@@ -29,6 +29,8 @@ ICatInformation, ICatRegister, IEnumCATEGORYINFO, IEnumGUID, IInspectable, IMess
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
+    <ProjectReference Include="..\Gdi32\Vanara.PInvoke.Gdi32.csproj" />
+    <ProjectReference Include="..\Rpc\Vanara.PInvoke.Rpc.csproj" />
     <ProjectReference Include="..\Security\Vanara.PInvoke.Security.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
