--- a/PInvoke/AMSI/Vanara.PInvoke.AMSI.csproj
+++ b/PInvoke/AMSI/Vanara.PInvoke.AMSI.csproj
@@ -10,7 +10,18 @@
     <AssemblyName>Vanara.PInvoke.AMSI</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;amsi;antimalware scan interface</PackageTags>
-    <PackageReleaseNotes/>
+    <PackageReleaseNotes>Currently implements:
+
+Functions
+AmsiCloseSession AmsiInitialize AmsiNotifyOperation AmsiOpenSession AmsiScanBuffer AmsiScanString AmsiUacInitialize AmsiUacScan AmsiUacUninitialize AmsiUninitialize
+
+Structures
+HAMSICONTEXT HAMSISESSION
+
+Interfaces
+IAmsiStream IAntimalware IAntimalware2 IAntimalwareProvider IAntimalwareProvider2
+
+</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
