--- a/Management/Vanara.Management.csproj
+++ b/Management/Vanara.Management.csproj
@@ -6,7 +6,12 @@
     <AssemblyName>Vanara.Management</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>vanara;net-extensions;WMI</PackageTags>
-    <PackageReleaseNotes />
+    <PackageReleaseNotes>Currently implements:
+
+Classes
+DynamicMgmtObject, ManagementExtensions
+
+</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
     <!--<ProjectReference Include="..\..\Core\Vanara.Core.csproj" />-->
