--- a/Core/Vanara.Core.csproj
+++ b/Core/Vanara.Core.csproj
@@ -14,24 +14,24 @@
     <PackageReleaseNotes>Currently implements:
 
 Classes
-AlignedMemory&lt;T&gt;, AppendedStringAttribute, ArrayAttribute, AutoHandleAttribute, AutoSafeHandleAttribute, BeginEndEventContext, BitFieldAttribute&lt;T&gt;, BitHelper, ByteSizeFormatter, CloseHandleFunc, ComConnectionPoint, ComEnumString, ComReleaser&lt;T&gt;, ComReleaserFactory, ComStream, ComTypeExtensions, ConstantConversionExtensions, CorrespondingTypeAttribute, CoTaskMemoryMethods, EnumerableEqualityComparer&lt;T&gt;, EnumExtensions, EventedList&lt;T&gt;, FileTimeExtensions, FixedStringAttribute, Formatter, FormatterComposer, GenericSafeHandle, GenericVirtualReadOnlyDictionary&lt;T&gt;, HexDumpHelpers, HGlobalMemoryMethods, History&lt;T&gt;, IArrayStructExtensions, IArrayStructMarshaler&lt;T&gt;, InteropExtensions, IntPtrConverter, IOExtensions, LibHelper, LinqHelpers, ListChangedEventArgs&lt;T&gt;, MarshaledAlternativeAttribute, MarshaledAttribute, Marshaler, MarshalerOptions, MarshalException, MarshalFieldAs, MarshalingStream, Matrix, Matrix&lt;T&gt;, MemoryMethodsBase, NativeMemoryEnumerator&lt;T&gt;, NativeMemoryStream, PinnedObject, ReflectionExtensions, ReflectionExtensions, SafeAllocatedMemoryHandle, SafeAllocatedMemoryHandleBase, SafeByteArray, SafeCoTaskMemHandle, SafeCoTaskMemString, SafeCoTaskMemStruct&lt;T&gt;, SafeGuidPtr, SafeHANDLE, SafeHGlobalHandle, SafeHGlobalStruct&lt;T&gt;, SafeLPSTR, SafeLPTSTR, SafeLPWSTR, SafeMemoryHandle&lt;T&gt;, SafeMemoryHandleExt&lt;T&gt;, SafeMemoryPool&lt;T&gt;, SafeMemString&lt;T&gt;, SafeMemStruct&lt;T&gt;, SizeFieldNameAttribute, SizeFieldNameAttributeExt, SizeOfAttribute, SpanAction, SparseArray&lt;T&gt;, StringHelper, StructPtrAttribute, SuppressAutoGenAttribute, TryGetDelegate, TryGetValueDelegate, UnionHelper, UntypedNativeMemoryEnumerator, VanaraCustomMarshaler&lt;T&gt;, VanaraMarshaler, VanaraMarshalerAttribute, VirtualDictionary&lt;T&gt;, VirtualList&lt;T&gt;, VirtualListMethodCarrier&lt;T&gt;, VirtualReadOnlyDictionary&lt;T&gt;, VirtualReadOnlyList&lt;T&gt;
+AddAsCtorAttribute, AddAsMemberAttribute, AdjustAutoMethodNamePatternAttribute, AlignedMemory&lt;T&gt;, AppendedStringAttribute, ArrayAttribute, AutoHandleAttribute, AutoSafeHandleAttribute, BeginEndEventContext, BitFieldAttribute&lt;T&gt;, BitHelper, ByteSizeFormatter, CloseHandleFunc, ComConnectionPoint, ComEnumString, ComReleaser&lt;T&gt;, ComReleaserFactory, ComStream, ComTypeExtensions, ConstantConversionExtensions, CorrespondingTypeAttribute, CoTaskMemoryMethods, DeferAutoMethodToAttribute, EnumerableEqualityComparer&lt;T&gt;, EnumExtensions, EventedList&lt;T&gt;, FileTimeExtensions, FixedStringAttribute, Formatter, FormatterComposer, GenericSafeHandle, GenericVirtualReadOnlyDictionary&lt;T&gt;, GuidToStringMarshaler, HexDumpHelpers, HGlobalMemoryMethods, History&lt;T&gt;, IArrayStructExtensions, IArrayStructMarshaler&lt;T&gt;, IgnoreAttribute, InteropExtensions, IntPtrConverter, IOExtensions, LibHelper, LinqHelpers, ListChangedEventArgs&lt;T&gt;, MarshaledAlternativeAttribute, MarshaledAttribute, Marshaler, MarshalerOptions, MarshalException, MarshalFieldAs, MarshalingStream, Matrix, Matrix&lt;T&gt;, MemoryMethodsBase, NativeMemoryEnumerator&lt;T&gt;, NativeMemoryStream, PinnedObject, ReflectionExtensions, ReflectionExtensions, SafeAllocatedMemoryHandle, SafeAllocatedMemoryHandleBase, SafeByteArray, SafeCoTaskMemHandle, SafeCoTaskMemString, SafeCoTaskMemStruct&lt;T&gt;, SafeGuidPtr, SafeHANDLE, SafeHGlobalHandle, SafeHGlobalStruct&lt;T&gt;, SafeLPSTR, SafeLPTSTR, SafeLPWSTR, SafeMemoryHandle&lt;T&gt;, SafeMemoryHandleExt&lt;T&gt;, SafeMemoryPool&lt;T&gt;, SafeMemString&lt;T&gt;, SafeMemStruct&lt;T&gt;, SizeDefAttribute, SizeFieldNameAttribute, SizeFieldNameAttributeExt, SizeOfAttribute, SpanAction, SparseArray&lt;T&gt;, StringHelper, StructPtrAttribute, SuppressAutoGenAttribute, TryGetDelegate, TryGetValueDelegate, UnionHelper, UntypedNativeMemoryEnumerator, VanaraCustomMarshaler&lt;T&gt;, VanaraMarshaler, VanaraMarshalerAttribute, VirtualDictionary&lt;T&gt;, VirtualList&lt;T&gt;, VirtualListMethodCarrier&lt;T&gt;, VirtualReadOnlyDictionary&lt;T&gt;, VirtualReadOnlyList&lt;T&gt;
 
 Structures
 AnySizeStructFieldArray&lt;T&gt;, AnySizeStructUnmanagedFieldArray&lt;T&gt;, ArrayPointer&lt;T&gt;, BitField&lt;T&gt;, BOOL, BOOLEAN, EnumFlagIndexer&lt;T&gt;, GuidPtr, IUnknownPointer&lt;T&gt;, LPCSTRArrayPointer, LPCTSTRArrayPointer, LPCWSTRArrayPointer, ManagedArrayPointer&lt;T&gt;, ManagedStructPointer&lt;T&gt;, RefEnumerator&lt;T&gt;, SizeT, StrPtrAnsi, StrPtrAuto, StrPtrUni, StructPointer&lt;T&gt;, time_t
 
 Enumerations
-ArrayLayout, Bitness, CorrespondingAction, FileAttributeConstant, FileOpConstant, FilePermissionConstant, LayoutModel, StringEncoding, StringListPackMethod
+ArrayLayout, Bitness, CorrespondingAction, FileAttributeConstant, FileOpConstant, FilePermissionConstant, LayoutModel, SizingMethod, StringEncoding, StringListPackMethod
 
 </PackageReleaseNotes>
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
-  <ItemGroup Condition=" $(NETSTANDARD2_0) " >
+  <ItemGroup Condition=" $(NETSTANDARD2_0) ">
     <PackageReference Include="System.ValueTuple" />
   </ItemGroup>
-  <ItemGroup Condition=" $(NET40_OR_GREATER) Or $(NETSTANDARD2_0) " >
+  <ItemGroup Condition=" $(NET40_OR_GREATER) Or $(NETSTANDARD2_0) ">
     <PackageReference Include="System.Memory" />
   </ItemGroup>
-  <ItemGroup Condition=" $(NETSTANDARD2_1) " >
+  <ItemGroup Condition=" $(NETSTANDARD2_1) ">
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" />
   </ItemGroup>
   <ItemGroup>
