--- a/UnitTests/PInvoke/Hid/Hid.csproj
+++ b/UnitTests/PInvoke/Hid/Hid.csproj
@@ -4,5 +4,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\PInvoke\Hid\Vanara.PInvoke.Hid.csproj" />
+    <ProjectReference Include="..\..\..\PInvoke\SetupAPI\Vanara.PInvoke.SetupAPI.csproj" />
   </ItemGroup>
 </Project>
